syntax = "proto3";

package ps;

option go_package = "Denterry.ps.v1;psv1";

service PostService {
    rpc CreatePost(CreatePostRequest) returns (PostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
    rpc DeletePost(DeletePostRequest) returns (PostResponse);
    rpc GetPostById(GetPostByIdRequest) returns (PostResponse);
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
}


message CreatePostRequest {
    int64 authorId = 1;
    string title = 2;
    string content = 3;
}

message UpdatePostRequest {
    int64 postId = 1;
    string title = 2;
    string content = 3;
}

message DeletePostRequest {
    int64 postId = 1;
}

message GetPostByIdRequest {
    int64 postId = 1;
}

message GetPostsRequest {
    int32 page = 1;
    int32 pageSize = 2;
}


message PostResponse {
    string postId = 1;
    string title = 2;
    string content = 3;
    string authorId = 4;
}

message GetPostsResponse {
    repeated PostResponse posts = 1;
}